--- a/web/css/light.css
+++ b/web/css/light.css
@@ -22,49 +22,52 @@ tr.odd.expandRow > :hover { background: #FFF !important; }
 
 @media only screen and (max-width: 992px) {
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
-    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
-    #hdd, tr td:nth-child(15)			{ display:none; visibility:hidden; }
+	#load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+	#loss, tr td:nth-child(11)			{ display:none; visibility:hidden; }
+	#hdd, tr td:nth-child(16)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 720px) {
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
-    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
+	#load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+	#loss, tr td:nth-child(11)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
-    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
-    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
+	#status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
+	#status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
-    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
-    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
-}
-@media only screen and (max-width: 533px) {
-    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
-    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
-	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
-    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
-    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
-    #cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
+	#load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+	#loss, tr td:nth-child(11)			{ display:none; visibility:hidden; }
+}
+@media only screen and (max-width: 533px) {
+	#status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
+	#status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
+	#load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+	#connections, tr td:nth-child(10)	{ display:none; visibility:hidden; }
+	#loss, tr td:nth-child(11)			{ display:none; visibility:hidden; }
+	#cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
-    #status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
-    #status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
+	#status4, tr td:nth-child(1)		{ display:none; visibility:hidden; }
+	#status6, tr td:nth-child(2)		{ display:none; visibility:hidden; }
 	#name, tr td:nth-child(4)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 	#type, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-    #host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#host, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 	#location, tr td:nth-child(7)		{ display:none; visibility:hidden; }
 	#uptime, tr td:nth-child(8)			{ display:none; visibility:hidden; }
-    #load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
-    #loss, tr td:nth-child(10)          { display:none; visibility:hidden; }
-    #hdd, tr td:nth-child(15)			{ display:none; visibility:hidden; }
+	#load, tr td:nth-child(9)			{ display:none; visibility:hidden; }
+	#connections, tr td:nth-child(10)	{ display:none; visibility:hidden; }
+	#loss, tr td:nth-child(11)			{ display:none; visibility:hidden; }
+	#hdd, tr td:nth-child(16)			{ display:none; visibility:hidden; }
 	#cpu, #memory, #hdd					{ min-width: 25px; max-width: 50px; }
 }
